--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,7 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <script src="https://kit.fontawesome.com/38bb8d0cb1.js" crossorigin="anonymous"></script>
-  <title>React App</title>
+  <title>FullThrottle Labs</title>
 </head>
 
 <body>
